--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "eslint \"src/*.ts\" --fix"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.15.0",
     "puppeteer": "^23.4.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
